k8/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-app
  labels:
    app: backend
  annotations:
    prometheus.io/scrape: "true"     # tells Prometheus to scrape
    prometheus.io/path: "/metrics"   # ✅ explicitly define metrics endpoint
    prometheus.io/port: "3001"       # metrics exposed on port 3001
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      nodePort: 30002
