k8/mern-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern-app
  labels:
    name: fintrack-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
